# REST-API

./: .env.example  Cargo.toml  README.md
sql/: schema.sql  seed.sql
src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs  query_builder.rs
